@@ -15,6 +15,10 @@ propellor (5.2.0) UNRELEASED; urgency=medium
   * Fix bug in unmountBelow that caused unmounting of nested mounts to
     fail.
   * Grub.boots, Grub.bootsMounted: Pass --target to grub-install.
+  * Added Propellor.Property.Installer modules, which can be used to create
+    bootable installer disk images, which then run propellor to install
+    a system. This code was extracted from the demo I gave at my
+    talk at DebConf 2017.
 
   [ Sean Whitton ]
   * Sbuild: add notes about Debian jessie hosts and backports of sbuild and
